# kraken

scripts/: build_kraken_db.sh
src/: CMakeLists.txt  Makefile  classify.cpp
